# rust01

./: .env.example  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: deploy.yaml
db-migration/: Dockerfile
db-migration/migrations/: 20230423025628_create_users_table.up.sql
db-migration/scripts/: migrate.sh  migrate_local.sh
src/: main.rs
src/db/: mod.rs
src/entities/: mod.rs  prelude.rs  schema_migrations.rs  users.rs
src/fairings/: cors.rs
src/handlers/: mod.rs  user.rs  user_handler.rs
src/models/: user_model.rs
src/repositories/: user_repository.rs
src/services/: user_service.rs
