[package]
name = "rust01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12", features = [ 
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros" 
] }
chrono = "0.4.35"
